Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9836

QS60Style: Sometimes progressbars do not animate

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.7.0
    • 4.6.2
    • GUI: Look'n'Feel
    • None
    • e4d03c6b56decd63035a7c46498dae2d2a483c09

    Description

      If application contains several progress bars that are shown/hidden separately, not all of them will animate.
      This is due to invalid handling of Hide/Destroy events in QS60Style. Hiding one progressbar will remove all
      of the progressbars from internal "animation list" and thus, all cease to animate.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samimeri Sami Merila (Inactive)
            samimeri Sami Merila (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes