QS60Style: Sometimes progressbars do not animate Style removes every progressbar from animation list whenever *any* QWidget is hidden/shown. To ensure that the animation list is only tempered with possible animation supporting qwidgets, re-interpret cast them to QProgressBar. If this works, then clear the animation list.

Task-number: QTBUG-9836
Reviewed-by: Alessandro Portale